# the-internet-robot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  robot.yaml
.github/workflows/: ci.yml
pages/: __init__.py  add_remove_elements_page.py  base_page.py  checkboxes_page.py  dropdown_page.py  dynamic_controls_page.py  file_upload_page.py  hovers_page.py  inputs_page.py  javascript_alerts_page.py  key_presses_page.py  login_page.py
resources/: common_keywords.robot  config.robot
tests/: test_add_remove_elements.robot  test_checkboxes.robot  test_dropdown.robot  test_dynamic_controls.robot  test_hovers.robot  test_inputs.robot  test_javascript_alerts.robot  test_key_presses.robot  test_login.robot
